--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -49,10 +49,6 @@
   "Unpublish": "Unpublish",
   "Unpublished {{ documentName }}": "Unpublished {{ documentName }}",
   "Share this document": "Share this document",
-  "HTML": "HTML",
-  "PDF": "PDF",
-  "Exporting": "Exporting",
-  "Markdown": "Markdown",
   "Download": "Download",
   "Download document": "Download document",
   "Copy as Markdown": "Copy as Markdown",
@@ -200,6 +196,16 @@
   "Couldn’t copy the document, try again?": "Couldn’t copy the document, try again?",
   "Include nested documents": "Include nested documents",
   "Copy to <em>{{ location }}</em>": "Copy to <em>{{ location }}</em>",
+  "Export started": "Export started",
+  "Your file will be available in {{ location }} soon": "Your file will be available in {{ location }} soon",
+  "View": "View",
+  "A ZIP file containing the images, and documents in the Markdown format.": "A ZIP file containing the images, and documents in the Markdown format.",
+  "A ZIP file containing the images, and documents as HTML files.": "A ZIP file containing the images, and documents as HTML files.",
+  "A ZIP file containing the images, and documents as PDF files.": "A ZIP file containing the images, and documents as PDF files.",
+  "Export": "Export",
+  "Exporting the document <em>{{documentName}}</em> including its children may take some time.": "Exporting the document <em>{{documentName}}</em> including its children may take some time.",
+  "You will receive an email when it's complete.": "You will receive an email when it's complete.",
+  "Include child documents": "Include child documents",
   "Search collections & documents": "Search collections & documents",
   "No results found": "No results found",
   "New": "New",
@@ -247,15 +253,8 @@
   "{{userName}} published": "{{userName}} published",
   "{{userName}} unpublished": "{{userName}} unpublished",
   "{{userName}} moved": "{{userName}} moved",
-  "Export started": "Export started",
-  "Your file will be available in {{ location }} soon": "Your file will be available in {{ location }} soon",
-  "View": "View",
-  "A ZIP file containing the images, and documents in the Markdown format.": "A ZIP file containing the images, and documents in the Markdown format.",
-  "A ZIP file containing the images, and documents as HTML files.": "A ZIP file containing the images, and documents as HTML files.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Structured data that can be used to transfer data to another compatible {{ appName }} instance.",
-  "Export": "Export",
   "Exporting the collection <em>{{collectionName}}</em> may take some time.": "Exporting the collection <em>{{collectionName}}</em> may take some time.",
-  "You will receive an email when it's complete.": "You will receive an email when it's complete.",
   "Include attachments": "Include attachments",
   "Including uploaded images and files in the exported data": "Including uploaded images and files in the exported data",
   "{{count}} more user": "{{count}} more user",
@@ -800,6 +799,7 @@
   "Insert row": "Insert row",
   "Next cell": "Next cell",
   "Previous cell": "Previous cell",
+  "Markdown": "Markdown",
   "Space": "Space",
   "Numbered list": "Numbered list",
   "Blockquote": "Blockquote",
