--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -200,12 +200,15 @@
   "Your file will be available in {{ location }} soon": "Your file will be available in {{ location }} soon",
   "View": "View",
   "A ZIP file containing the images, and documents in the Markdown format.": "A ZIP file containing the images, and documents in the Markdown format.",
+  "Document, along with the images, will be downloaded in the Markdown format.": "Document, along with the images, will be downloaded in the Markdown format.",
   "A ZIP file containing the images, and documents as HTML files.": "A ZIP file containing the images, and documents as HTML files.",
+  "Document, along with the images, will be downloaded as a HTML file.": "Document, along with the images, will be downloaded as a HTML file.",
   "A ZIP file containing the images, and documents as PDF files.": "A ZIP file containing the images, and documents as PDF files.",
+  "Document, along with the images, will be downloaded as a PDF file.": "Document, along with the images, will be downloaded as a PDF file.",
   "Export": "Export",
-  "Exporting the document <em>{{documentName}}</em> including its children may take some time.": "Exporting the document <em>{{documentName}}</em> including its children may take some time.",
-  "You will receive an email when it's complete.": "You will receive an email when it's complete.",
   "Include child documents": "Include child documents",
+  "When selected, exporting the document <em>{{documentName}}</em> may take some time.": "When selected, exporting the document <em>{{documentName}}</em> may take some time.",
+  "You will receive an email when it's complete.": "You will receive an email when it's complete.",
   "Search collections & documents": "Search collections & documents",
   "No results found": "No results found",
   "New": "New",
