fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -1,5 +1,8 @@
 {
   "New API key": "새 API 키",
+  "Revoke": "취소",
+  "Revoke API key": "Revoke API key",
+  "Revoke token": "토큰 취소",
   "Open collection": "컬렉션 열기",
   "New collection": "새 컬렉션",
   "Create a collection": "컬렉션 만들기",
@@ -530,8 +533,7 @@
   "Import": "불러오기",
   "Install": "설치",
   "Integrations": "연동",
-  "Revoke token": "토큰 취소",
-  "Revoke": "취소",
+  "API key": "API key",
   "Show path to document": "문서 경로 표시",
   "Path to document": "문서 경로",
   "Group member options": "그룹 멤버 옵션",
@@ -549,7 +551,7 @@
   "Subscription inherited from collection": "컬렉션으로부터 상속된 구독",
   "Apply template": "템플릿 적용",
   "Enable embeds": "임베드 활성화",
-  "Export options": "내보내기 옵션",
+  "File": "File",
   "Group members": "그룹 구성원",
   "Edit group": "그룹 수정",
   "Delete group": "그룹 삭제",
