--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -1,5 +1,8 @@
 {
   "New API key": "新建 API 密钥",
+  "Revoke": "吊销",
+  "Revoke API key": "Revoke API key",
+  "Revoke token": "吊销 token",
   "Open collection": "打开文档集",
   "New collection": "新建文档集",
   "Create a collection": "创建文档集",
@@ -530,8 +533,7 @@
   "Import": "导入",
   "Install": "安装",
   "Integrations": "集成",
-  "Revoke token": "吊销 token",
-  "Revoke": "吊销",
+  "API key": "API key",
   "Show path to document": "显示文档路径",
   "Path to document": "文件路径",
   "Group member options": "群组成员选项",
@@ -549,7 +551,7 @@
   "Subscription inherited from collection": "从收藏继承下来的订阅",
   "Apply template": "应用模板",
   "Enable embeds": "启用嵌入",
-  "Export options": "导出选项",
+  "File": "File",
   "Group members": "群组成员",
   "Edit group": "编辑群组",
   "Delete group": "删除群组",
