fix: New Portuguese, Brazilian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -1,5 +1,8 @@
 {
   "New API key": "Nova chave de API",
+  "Revoke": "Revogar",
+  "Revoke API key": "Revoke API key",
+  "Revoke token": "Revogar token",
   "Open collection": "Abrir coleção",
   "New collection": "Nova coleção",
   "Create a collection": "Criar uma coleção",
@@ -530,8 +533,7 @@
   "Import": "Importar",
   "Install": "Instalar",
   "Integrations": "Integrações",
-  "Revoke token": "Revogar token",
-  "Revoke": "Revogar",
+  "API key": "API key",
   "Show path to document": "Mostrar caminho para o documento",
   "Path to document": "Caminho para o documento",
   "Group member options": "Opções de membros do grupo",
@@ -549,7 +551,7 @@
   "Subscription inherited from collection": "Subscrição herdada da coleção",
   "Apply template": "Aplicar modelo",
   "Enable embeds": "Habilitar incorporações",
-  "Export options": "Opções de exportação",
+  "File": "File",
   "Group members": "Membros do grupo",
   "Edit group": "Editar grupo",
   "Delete group": "Remover grupo",
