fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -1,5 +1,8 @@
 {
   "New API key": "Ny API-nøkkel",
+  "Revoke": "Opphev",
+  "Revoke API key": "Revoke API key",
+  "Revoke token": "Opphev token",
   "Open collection": "Åpne samling",
   "New collection": "Ny samling",
   "Create a collection": "Opprett en samling",
@@ -530,8 +533,7 @@
   "Import": "Importer",
   "Install": "Installer",
   "Integrations": "Integrasjoner",
-  "Revoke token": "Opphev token",
-  "Revoke": "Opphev",
+  "API key": "API key",
   "Show path to document": "Vis sti til dokument",
   "Path to document": "Sti til dokument",
   "Group member options": "Gruppemedlemalternativer",
@@ -549,7 +551,7 @@
   "Subscription inherited from collection": "Abonnement arvet fra samling",
   "Apply template": "Bruk mal",
   "Enable embeds": "Aktiver innebygginger",
-  "Export options": "Eksportalternativer",
+  "File": "File",
   "Group members": "Gruppemedlemmer",
   "Edit group": "Rediger gruppe",
   "Delete group": "Slett gruppe",
