fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -533,7 +533,7 @@
   "Import": "导入",
   "Install": "安装",
   "Integrations": "集成",
-  "API key": "API key",
+  "API key": "API 密钥",
   "Show path to document": "显示文档路径",
   "Path to document": "文件路径",
   "Group member options": "群组成员选项",
@@ -855,7 +855,7 @@
   "Choose workspace": "选择工作区",
   "This login method requires choosing your workspace to continue": "这种登录方法需要选择工作区才能继续",
   "Check your email": "检查你的电子邮件",
-  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "输入发送到邮箱的登录码 <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "如果帐户存在，魔法登录链接已发送至电子邮件 <em>{{ emailLinkSentTo }}</em>。",
   "Back to login": "回到登录界面",
   "Get started by choosing a sign-in method for your new workspace below…": "先为你的新工作区选择一种登录方法，再继续…",
