fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -43,7 +43,7 @@
   "Development": "Nhà phát triển",
   "Open document": "Mở tài liệu",
   "New document": "Tài liệu mới",
-  "New draft": "New draft",
+  "New draft": "Tạo dự thảo",
   "New from template": "Tạo mới từ bản mẫu",
   "New nested document": "Tài liệu mới lồng nhau",
   "Publish": "Đăng tải",
@@ -61,8 +61,8 @@
   "Copy as Markdown": "Sao chép dưới dạng Markdown",
   "Markdown copied to clipboard": "Đã sao chép Markdown vào clipboard",
   "Copy as text": "Copy as text",
-  "Text copied to clipboard": "Text copied to clipboard",
-  "Copy public link": "Copy public link",
+  "Text copied to clipboard": "Nội dung đã được chép vào bộ nhớ",
+  "Copy public link": "Sao chép liên kết công khai",
   "Link copied to clipboard": "Đường Link đã sao chép vào bộ nhớ tạm",
   "Copy link": "Sao chép Link",
   "Copy": "Sao chép",
@@ -365,7 +365,7 @@
   "Publish to internet": "Đăng tải lên internet",
   "Search engine indexing": "Search engine indexing",
   "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
-  "Show last modified": "Show last modified",
+  "Show last modified": "Hiện lần sửa cuối",
   "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future",
   "{{ userName }} was added to the document": "{{ userName }} was added to the document",
@@ -374,7 +374,7 @@
   "{{ count }} groups added to the document": "{{ count }} groups added to the document",
   "{{ count }} groups added to the document_plural": "{{ count }} groups added to the document",
   "Logo": "Logo",
-  "Archived collections": "Archived collections",
+  "Archived collections": "Bộ sưu tập đã lưu trữ",
   "New doc": "Tài liệu mới",
   "Empty": "Trống",
   "Collapse": "Thu nhỏ",
@@ -383,7 +383,7 @@
   "Go back": "Quay lại",
   "Go forward": "Đi tiếp",
   "Could not load shared documents": "Could not load shared documents",
-  "Shared with me": "Shared with me",
+  "Shared with me": "Chia sẻ với tôi",
   "Show more": "Hiển thị thêm",
   "Could not load starred documents": "Could not load starred documents",
   "Starred": "Được gắn sao",
