fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -19,12 +19,12 @@
   "Unsubscribe": "Huỷ đăng ký theo dõi",
   "Unsubscribed from document notifications": "Huỷ đăng ký theo dõi thông báo của tài liệu",
   "Archive": "Lưu trữ",
-  "Archive collection": "Archive collection",
-  "Collection archived": "Collection archived",
+  "Archive collection": "Lưu trữ bộ sưu tập",
+  "Collection archived": "Bộ sưu tập đã được lưu trữ",
   "Archiving": "Lưu trữ",
   "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.",
   "Restore": "Khôi phục",
-  "Collection restored": "Collection restored",
+  "Collection restored": "Bộ sưu tập đã được khôi phục",
   "Delete": "Xóa",
   "Delete collection": "Xoá bộ sưu tập",
   "New template": "Mẫu mới",
@@ -32,8 +32,8 @@
   "Mark as resolved": "Đánh dấu là đã giải quyết",
   "Thread resolved": "Chủ đề đã được giải quyết",
   "Mark as unresolved": "Đánh dấu là chưa giải quyết",
-  "View reactions": "View reactions",
-  "Reactions": "Reactions",
+  "View reactions": "Xem phản ứng",
+  "Reactions": "Phản ứng",
   "Copy ID": "Sao chép ID",
   "Clear IndexedDB cache": "Xóa bộ nhớ đệm IndexedDB",
   "IndexedDB cache cleared": "Đã xóa bộ nhớ đệm IndexedDB",
@@ -100,7 +100,7 @@
   "Insights": "Thông tin chi tiết",
   "Disable viewer insights": "Tắt thông tin chi tiết của người xem",
   "Enable viewer insights": "Bật thông tin chi tiết về người xem",
-  "Leave document": "Leave document",
+  "Leave document": "Rời khỏi tài liệu",
   "You have left the shared document": "You have left the shared document",
   "Could not leave document": "Could not leave document",
   "Home": "Trang chủ",
