fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -1,7 +1,7 @@
 {
   "New API key": "Khóa API mới",
   "Revoke": "Thu hồi",
-  "Revoke API key": "Revoke API key",
+  "Revoke API key": "Thu hồi khóa API",
   "Revoke token": "Thu hồi token",
   "Open collection": "Mở bộ sưu tập",
   "New collection": "Bộ sưu tập mới",
@@ -60,7 +60,7 @@
   "Download document": "Tải tài liệu",
   "Copy as Markdown": "Sao chép dưới dạng Markdown",
   "Markdown copied to clipboard": "Đã sao chép Markdown vào clipboard",
-  "Copy as text": "Copy as text",
+  "Copy as text": "Sao chép thuần văn bản",
   "Text copied to clipboard": "Nội dung đã được chép vào bộ nhớ",
   "Copy public link": "Sao chép liên kết công khai",
   "Link copied to clipboard": "Đường Link đã sao chép vào bộ nhớ tạm",
@@ -101,7 +101,7 @@
   "Disable viewer insights": "Tắt thông tin chi tiết của người xem",
   "Enable viewer insights": "Bật thông tin chi tiết về người xem",
   "Leave document": "Rời khỏi tài liệu",
-  "You have left the shared document": "You have left the shared document",
+  "You have left the shared document": "Bạn đã rời khỏi tài liệu chia sẻ",
   "Could not leave document": "Could not leave document",
   "Home": "Trang chủ",
   "Drafts": "Bản nháp",
@@ -315,8 +315,8 @@
   "Add reaction": "Add reaction",
   "Reaction picker": "Reaction picker",
   "Could not load reactions": "Could not load reactions",
-  "Reaction": "Reaction",
-  "Revision deleted": "Revision deleted",
+  "Reaction": "Phản ứng",
+  "Revision deleted": "Phiên bản đã được xóa",
   "Current version": "Phiên bản hiện tại",
   "{{userName}} edited": "{{userName}} đã chỉnh sửa",
   "Results": "Kết quả",
