--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -123,7 +123,7 @@
   "Log out": "Đăng xuất",
   "Mark notifications as read": "Đánh dấu thông báo là đã đọc",
   "Archive all notifications": "Lưu trữ tất cả thông báo",
-  "New App": "New App",
+  "New App": "Tạo App",
   "New Application": "New Application",
   "This version of the document was deleted": "This version of the document was deleted",
   "Link copied": "Đã sao chép Link",
@@ -166,8 +166,8 @@
   "The default access for workspace members, you can share with more users or groups later.": "Quyền truy cập mặc định dành cho các thành viên không gian làm việc, bạn có thể chia sẻ với nhiều người dùng hoặc nhóm hơn sau này.",
   "Public document sharing": "Chia sẻ tài liệu công khai",
   "Allow documents within this collection to be shared publicly on the internet.": "Cho phép các tài liệu trong bộ sưu tập này được chia sẻ công khai trên Internet.",
-  "Commenting": "Đang bình luận",
-  "Allow commenting on documents within this collection.": "Allow commenting on documents within this collection.",
+  "Commenting": "Bình luận",
+  "Allow commenting on documents within this collection.": "Bật bình luận tài cho tài liệu thuộc bộ sưu tập này.",
   "Saving": "Đang lưu lại",
   "Save": "Lưu",
   "Creating": "Đang tạo",
@@ -368,11 +368,11 @@
   "Show last modified": "Hiện lần sửa cuối",
   "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future",
-  "{{ userName }} was added to the document": "{{ userName }} was added to the document",
-  "{{ count }} people added to the document": "{{ count }} people added to the document",
-  "{{ count }} people added to the document_plural": "{{ count }} people added to the document",
-  "{{ count }} groups added to the document": "{{ count }} groups added to the document",
-  "{{ count }} groups added to the document_plural": "{{ count }} groups added to the document",
+  "{{ userName }} was added to the document": "{{ userName }} đã được thêm vào tài liệu",
+  "{{ count }} people added to the document": "{{ count }} người đã được thêm vào tài liệu",
+  "{{ count }} people added to the document_plural": "{{ count }} người đã được thêm vào tài liệu",
+  "{{ count }} groups added to the document": "{{ count }} nhóm đã được thêm vào tài liệu",
+  "{{ count }} groups added to the document_plural": "{{ count }} nhóm đã được thêm vào tài liệu",
   "Logo": "Logo",
   "Archived collections": "Bộ sưu tập đã lưu trữ",
   "New doc": "Tài liệu mới",
@@ -382,18 +382,18 @@
   "Document not supported – try Markdown, Plain text, HTML, or Word": "Tài liệu không được hỗ trợ - hãy thử Markdown, Plain text, HTML hoặc Word",
   "Go back": "Quay lại",
   "Go forward": "Đi tiếp",
-  "Could not load shared documents": "Could not load shared documents",
+  "Could not load shared documents": "Không thể tải tài liệu được chia sẻ",
   "Shared with me": "Chia sẻ với tôi",
   "Show more": "Hiển thị thêm",
-  "Could not load starred documents": "Could not load starred documents",
+  "Could not load starred documents": "Không thể tải tài liệu được đánh sao",
   "Starred": "Được gắn sao",
   "Up to date": "Đã cập nhật",
   "{{ releasesBehind }} versions behind": "{{ releasesBehind }} phiên bản phía sau",
   "{{ releasesBehind }} versions behind_plural": "{{ releasesBehind }} phiên bản phía sau",
-  "Change permissions?": "Change permissions?",
-  "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} cannot be moved within {{ parentDocumentName }}",
+  "Change permissions?": "Thay đổi quyền?",
+  "{{ documentName }} cannot be moved within {{ parentDocumentName }}": "{{ documentName }} không thể di chuyển với bên trong {{ parentDocumentName }}",
   "You can't reorder documents in an alphabetically sorted collection": "Bạn không thể sắp xếp lại các tài liệu trong bộ sưu tập được sắp xếp theo thứ tự bảng chữ cái",
-  "The {{ documentName }} cannot be moved here": "The {{ documentName }} cannot be moved here",
+  "The {{ documentName }} cannot be moved here": "{{ documentName }} không thể di chuyển được đến đây",
   "Return to App": "Quay lại ứng dụng",
   "Installation": "Cài đặt",
   "Unstar document": "Unstar document",
@@ -414,26 +414,26 @@
   "Check your email to verify the new address.": "Check your email to verify the new address.",
   "The email will be changed once verified.": "The email will be changed once verified.",
   "You will receive an email to verify your new address. It must be unique in the workspace.": "You will receive an email to verify your new address. It must be unique in the workspace.",
-  "A confirmation email will be sent to the new address before it is changed.": "A confirmation email will be sent to the new address before it is changed.",
-  "New email": "New email",
-  "Email can't be empty": "Email can't be empty",
-  "Your import completed": "Your import completed",
-  "Sorry, invalid embed link": "Sorry, invalid embed link",
-  "Previous match": "Previous match",
-  "Next match": "Next match",
+  "A confirmation email will be sent to the new address before it is changed.": "Một email xác nhận sẽ được gửi đến địa chỉ mới trước khi thay đổi.",
+  "New email": "Email mới",
+  "Email can't be empty": "Không được để trống email",
+  "Your import completed": "Đã hoàn thành việc nhập dữ liệu",
+  "Sorry, invalid embed link": "Ôi, liên kết được nhúng không hợp lệ",
+  "Previous match": "Phù hợp trước",
+  "Next match": "Phù hợp tiếp",
   "Find and replace": "Tìm kiếm và thay thế",
   "Find": "Tìm kiếm",
-  "Match case": "Match case",
-  "Enable regex": "Enable regex",
-  "Replace options": "Replace options",
-  "Replacement": "Replacement",
+  "Match case": "Khớp hoa thường",
+  "Enable regex": "Bật regex",
+  "Replace options": "Tùy chọn thay thế",
+  "Replacement": "Thay thế",
   "Replace": "Thay thế",
   "Replace all": "Thay thế tất cả",
   "Profile picture": "Ảnh đại diện",
   "Create a new doc": "Tạo một tài liệu mới",
-  "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} won't be notified, as they do not have access to this document",
-  "Keep as link": "Keep as link",
-  "Mention": "Mention",
+  "{{ userName }} won't be notified, as they do not have access to this document": "{{ userName }} sẽ không được thông báo, bởi vì họ không có quyền truy cập tài liệu này",
+  "Keep as link": "Giữ dạng liên kết",
+  "Mention": "Nhắc đến",
   "Embed": "Embed",
   "Add column after": "Thêm cột phía sau",
   "Add column before": "Thêm cột phía trước",
@@ -515,8 +515,8 @@
   "Indent": "Thụt lề",
   "Outdent": "Nhô lề",
   "Video": "Video",
-  "None": "None",
-  "Delete embed": "Delete embed",
+  "None": "Không",
+  "Delete embed": "Xóa phần nhúng",
   "Could not import file": "Không thể nhập file",
   "Unsubscribed from document": "Unsubscribed from document",
   "Unsubscribed from collection": "Unsubscribed from collection",
@@ -527,45 +527,45 @@
   "Features": "Các tính năng",
   "Members": "Thành Viên",
   "Groups": "Nhóm",
-  "API Keys": "API Keys",
-  "Applications": "Applications",
+  "API Keys": "Khóa API",
+  "Applications": "Ứng dụng",
   "Shared Links": "Chia sẻ link",
   "Import": "Nhập",
-  "Install": "Install",
+  "Install": "Cài đặt",
   "Integrations": "Tích hợp",
-  "API key": "API key",
+  "API key": "Khóa API",
   "Show path to document": "Hiển thị đường dẫn đến tài liệu",
   "Path to document": "Đường dẫn đến tài liệu",
   "Group member options": "Tùy chọn thành viên nhóm",
   "Export collection": "Kết xuất bộ sưu tập",
   "Rename": "Đổi tên",
   "Sort in sidebar": "Sắp xếp trong sidebar",
-  "A-Z sort": "A-Z sort",
-  "Z-A sort": "Z-A sort",
+  "A-Z sort": "Từ A-Z",
+  "Z-A sort": "Từ Z-A",
   "Manual sort": "Sắp xếp thủ công",
   "Comment options": "Tùy chọn bình luận",
-  "Show document menu": "Show document menu",
-  "{{ documentName }} restored": "{{ documentName }} restored",
+  "Show document menu": "Hiện trình đơn tài liệu",
+  "{{ documentName }} restored": "{{ documentName }} đã được khôi phục",
   "Document options": "Tùy chọn tài liệu",
   "Choose a collection": "Chọn Bộ Sưu Tập",
-  "Subscription inherited from collection": "Subscription inherited from collection",
-  "Apply template": "Apply template",
+  "Subscription inherited from collection": "Đăng ký được thừa kế từ bộ sưu tập",
+  "Apply template": "Áp dụng mẫu",
   "Enable embeds": "Bật tính năng nhúng",
-  "File": "File",
+  "File": "Tập tin",
   "Group members": "Thành viên trong nhóm",
   "Edit group": "Chỉnh sửa nhóm",
   "Delete group": "Xóa nhóm",
   "Group options": "Tùy chọn nhóm",
   "Cancel": "Hủy bỏ",
-  "Import menu options": "Import menu options",
+  "Import menu options": "Tùy chọn nhập trình đơn",
   "Member options": "Tùy chọn thành viên",
   "New document in <em>{{ collectionName }}</em>": "Tài liệu mới trong <em>{{ collectionName }}</em>",
   "New child document": "Tài liệu con mới",
-  "Save in workspace": "Save in workspace",
-  "Notification settings": "Notification settings",
-  "Revoke {{ appName }}": "Revoke {{ appName }}",
+  "Save in workspace": "Lưu trong không gian làm việc",
+  "Notification settings": "Thiết lập thông báo",
+  "Revoke {{ appName }}": "Thu hồi {{ appName }}",
   "Revoking": "Đang thu hồi",
-  "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
+  "Are you sure you want to revoke access?": "Bạn có chắc muốn thu hồi quyền truy cập?",
   "Delete app": "Delete app",
   "Revision options": "Tùy chọn sửa đổi",
   "Share link revoked": "Đã thu hồi Link chia sẻ",
@@ -737,8 +737,8 @@
   "No access to this doc": "No access to this doc",
   "It doesn’t look like you have permission to access this document.": "It doesn’t look like you have permission to access this document.",
   "Please request access from the document owner.": "Please request access from the document owner.",
-  "Not found": "Not found",
-  "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.": "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.",
+  "Not found": "Không tồn tại",
+  "The page you’re looking for cannot be found. It might have been deleted or the link is incorrect.": "Trang bạn muốn truy cập không tồn tại. Có thể tài liệu đã bị xóa hoặc liên kết bị sai.",
   "Offline": "Offline",
   "We were unable to load the document while offline.": "Chúng tôi không thể tải tài liệu khi ngoại tuyến.",
   "Your account has been suspended": "Tài khoản của bạn đã bị vô hiệu hóa",
@@ -776,11 +776,11 @@
   "Jump to home": "Chuyển đến Home",
   "Focus search input": "Tập trung đầu vào tìm kiếm",
   "Open this guide": "Mở hướng dẫn này",
-  "Enter": "Enter",
+  "Enter": "Nhập",
   "Publish document and exit": "Đăng tải tài liệu và thoát",
   "Save document": "Lưu tài liệu",
   "Cancel editing": "Hủy chỉnh sửa",
-  "Collaboration": "Collaboration",
+  "Collaboration": "Cộng tác",
   "Formatting": "Định dạng",
   "Paragraph": "Đoạn văn",
   "Large header": "Tiêu đề lớn",
@@ -789,8 +789,8 @@
   "Underline": "Gạch dưới",
   "Undo": "Hoàn tác",
   "Redo": "Làm lại",
-  "Move block up": "Move block up",
-  "Move block down": "Move block down",
+  "Move block up": "Di chuyển khối lên",
+  "Move block down": "Di chuyển khối xuống",
   "Lists": "Danh sách",
   "Toggle task list item": "Toggle task list item",
   "Tab": "Tab",
@@ -798,7 +798,7 @@
   "Outdent list item": "Mục danh sách cũ",
   "Move list item up": "Di chuyển danh sách lên trên",
   "Move list item down": "Di chuyển danh sách xuống dưới",
-  "Tables": "Tables",
+  "Tables": "Bảng",
   "Insert row": "Insert row",
   "Next cell": "Next cell",
   "Previous cell": "Previous cell",
@@ -812,12 +812,12 @@
   "Triggers": "Triggers",
   "Mention users and more": "Mention users and more",
   "Emoji": "Emoji",
-  "Insert block": "Insert block",
+  "Insert block": "Chèn khối",
   "Sign In": "Đăng nhập",
   "Continue with Email": "Tiếp tục với email",
   "Continue with {{ authProviderName }}": "Tiếp tục với {{ authProviderName }}",
   "Back to home": "Quay lại trang chủ",
-  "The workspace could not be found": "The workspace could not be found",
+  "The workspace could not be found": "Không tìm thấy không gian làm việc",
   "To continue, enter your workspace’s subdomain.": "To continue, enter your workspace’s subdomain.",
   "subdomain": "tên miền phụ",
   "Continue": "Tiếp tục",
@@ -843,8 +843,8 @@
   "Create workspace": "Create workspace",
   "Setup your workspace by providing a name and details for admin login. You can change these later.": "Setup your workspace by providing a name and details for admin login. You can change these later.",
   "Workspace name": "Tên không gian làm việc",
-  "Admin name": "Admin name",
-  "Admin email": "Admin email",
+  "Admin name": "Tên quản trị",
+  "Admin email": "Email quản trị",
   "Login": "Đăng nhập",
   "Error": "Lỗi",
   "Failed to load configuration.": "Không tải được cấu hình.",
@@ -855,7 +855,7 @@
   "Choose workspace": "Chọn không gian làm việc",
   "This login method requires choosing your workspace to continue": "Phương thức đăng nhập này yêu cầu chọn không gian làm việc của bạn để tiếp tục",
   "Check your email": "Kiểm tra email của bạn",
-  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>",
+  "Enter the sign-in code sent to the email <em>{{ emailLinkSentTo }}</em>": "Điền mã truy cập đã được gửi đến email <em>{{ emailLinkSentTo }}</em>",
   "A magic sign-in link has been sent to the email <em>{{ emailLinkSentTo }}</em> if an account exists.": "Một liên kết đăng nhập kỳ diệu đã được gửi tới email <em>{{ emailLinkSentTo }}</em> nếu có tài khoản.",
   "Back to login": "Quay lại đăng nhập",
   "Get started by choosing a sign-in method for your new workspace below…": "Bắt đầu bằng cách chọn phương thức đăng nhập cho không gian làm việc mới của bạn dưới…",
@@ -863,11 +863,11 @@
   "You signed in with {{ authProviderName }} last time.": "Bạn đã đăng nhập bằng {{ authProviderName }} lần trước.",
   "Or": "Hoặc",
   "Already have an account? Go to <1>login</1>.": "Bạn đã có tài khoản? <1>Đăng nhập</1>.",
-  "An error occurred": "An error occurred",
+  "An error occurred": "Đã xảy ra lỗi",
   "The OAuth client could not be found, please check the provided client ID": "The OAuth client could not be found, please check the provided client ID",
   "The OAuth client could not be loaded, please check the redirect URI is valid": "The OAuth client could not be loaded, please check the redirect URI is valid",
   "Required OAuth parameters are missing": "Required OAuth parameters are missing",
-  "Authorize": "Authorize",
+  "Authorize": "Xác thực",
   "{{ appName }} wants to access {{ teamName }}": "{{ appName }} wants to access {{ teamName }}",
   "By <em>{{ developerName }}</em>": "By <em>{{ developerName }}</em>",
   "{{ appName }} will be able to access your account and perform the following actions": "{{ appName }} will be able to access your account and perform the following actions",
@@ -911,8 +911,8 @@
   "Manage which third-party and internal applications have been granted access to your {{ appName }} account.": "Manage which third-party and internal applications have been granted access to your {{ appName }} account.",
   "API": "API",
   "API keys can be used to authenticate with the API and programatically control\n          your workspace's data. For more details see the <em>developer documentation</em>.": "API keys can be used to authenticate with the API and programatically control\n          your workspace's data. For more details see the <em>developer documentation</em>.",
-  "Application published": "Application published",
-  "Application updated": "Application updated",
+  "Application published": "Đã xuất bản ứng dụng",
+  "Application updated": "Đã cập nhật ứng dụng",
   "Client secret rotated": "Client secret rotated",
   "Rotate secret": "Rotate secret",
   "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.": "Rotating the client secret will invalidate the current secret. Make sure to update any applications using these credentials.",
