fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -1,5 +1,6 @@
 {
   "New API key": "Khóa API mới",
+  "Delete": "Xóa",
   "Revoke": "Thu hồi",
   "Revoke API key": "Thu hồi khóa API",
   "Revoke token": "Thu hồi token",
@@ -25,7 +26,6 @@
   "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.",
   "Restore": "Khôi phục",
   "Collection restored": "Bộ sưu tập đã được khôi phục",
-  "Delete": "Xóa",
   "Delete collection": "Xoá bộ sưu tập",
   "New template": "Mẫu mới",
   "Delete comment": "Xoá bình luận",
@@ -623,9 +623,9 @@
   "Sorry, an error occurred saving the collection": "Xin lỗi, đã xảy ra lỗi khi lưu bộ sưu tập",
   "Add a description": "Thêm mô tả",
   "Share": "Chia sẻ",
-  "Overview": "Overview",
-  "Recently updated": "Được cập nhật gần đây",
-  "Recently published": "Đăng tải gần đây",
+  "Overview": "Tổng quan",
+  "Recently updated": "Mới cập nhật",
+  "Recently published": "Mới đăng tải",
   "Least recently updated": "Cập nhật ít nhất gần đây",
   "A–Z": "A – Z",
   "Signing in": "Đang đăng nhập",
