--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -23,7 +23,7 @@
   "Archive collection": "Lưu trữ bộ sưu tập",
   "Collection archived": "Bộ sưu tập đã được lưu trữ",
   "Archiving": "Lưu trữ",
-  "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.",
+  "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "Lưu trữ bộ sưu tập này cũng sẽ lưu trữ toàn bộ tài liệu bên trong. Tài liệu từ bộ sưu tập sẽ không hiển thị trong kết quả tìm kiếm.",
   "Restore": "Khôi phục",
   "Collection restored": "Bộ sưu tập đã được khôi phục",
   "Delete collection": "Xoá bộ sưu tập",
@@ -102,7 +102,7 @@
   "Enable viewer insights": "Bật thông tin chi tiết về người xem",
   "Leave document": "Rời khỏi tài liệu",
   "You have left the shared document": "Bạn đã rời khỏi tài liệu chia sẻ",
-  "Could not leave document": "Could not leave document",
+  "Could not leave document": "Không thể rời tài liệu này",
   "Home": "Trang chủ",
   "Drafts": "Bản nháp",
   "Search": "Tìm kiếm",
@@ -124,8 +124,8 @@
   "Mark notifications as read": "Đánh dấu thông báo là đã đọc",
   "Archive all notifications": "Lưu trữ tất cả thông báo",
   "New App": "Tạo App",
-  "New Application": "New Application",
-  "This version of the document was deleted": "This version of the document was deleted",
+  "New Application": "Ứng dụng mới",
+  "This version of the document was deleted": "Phiên bản của tài liệu đã bị xóa",
   "Link copied": "Đã sao chép Link",
   "Dark": "Dark",
   "Light": "Light",
@@ -182,11 +182,11 @@
   "Are you sure you want to permanently delete this entire comment thread?": "Bạn có chắc chắn muốn xóa bình luận này vĩnh viễn?",
   "Are you sure you want to permanently delete this comment?": "Bạn có chắc chắn muốn xóa bình luận này vĩnh viễn?",
   "Confirm": "Xác nhận",
-  "manage access": "manage access",
+  "manage access": "quản lý truy cập",
   "view and edit access": "xem và chỉnh sửa quyền truy cập",
   "view only access": "chỉ xem quyền truy cập",
   "no access": "không có quyền truy cập",
-  "You do not have permission to move {{ documentName }} to the {{ collectionName }} collection": "You do not have permission to move {{ documentName }} to the {{ collectionName }} collection",
+  "You do not have permission to move {{ documentName }} to the {{ collectionName }} collection": "Bạn không có quyền di chuyển {{ documentName }} đến bộ sưu tập {{ collectionName }}",
   "Move document": "Chuyển tài liệu",
   "Moving": "Đang chuyển",
   "Moving the document <em>{{ title }}</em> to the {{ newCollectionName }} collection will change permission for all workspace members from <em>{{ prevPermission }}</em> to <em>{{ newPermission }}</em>.": "Việc di chuyển tài liệu <em>{{ title }}</em> sang bộ sưu tập {{ newCollectionName }} sẽ thay đổi quyền cho tất cả các thành viên trong không gian làm việc từ <em>{{ prevPermission }}</em> thành <em>{{ newPermission }}</em>.",
@@ -197,12 +197,12 @@
   "Deleted Collection": "Xóa Bộ Sưu Tập",
   "Untitled": "Chưa đặt tên",
   "Unpin": "Bỏ ghim",
-  "{{ minutes }}m read": "{{ minutes }}m read",
-  "Select a location to copy": "Select a location to copy",
-  "Document copied": "Document copied",
-  "Couldn’t copy the document, try again?": "Couldn’t copy the document, try again?",
+  "{{ minutes }}m read": "{{ minutes }} phút đọc ",
+  "Select a location to copy": "Chọn vị trí đích cần sao chép",
+  "Document copied": "Đã sao chép tài liệu",
+  "Couldn’t copy the document, try again?": "Không thể sao chép tài liệu, muốn thử lại?",
   "Include nested documents": "Bao gồm các tài liệu lồng nhau",
-  "Copy to <em>{{ location }}</em>": "Copy to <em>{{ location }}</em>",
+  "Copy to <em>{{ location }}</em>": "Sao chép đến <em>{{ location }}</em>",
   "Search collections & documents": "Tìm kiếm bộ sưu tập và tài liệu",
   "No results found": "Không tìm thấy kết quả",
   "New": "Mới",
@@ -261,8 +261,8 @@
   "You will receive an email when it's complete.": "Bạn sẽ nhận được một email khi nó hoàn tất.",
   "Include attachments": "Bao gồm tập tin đính kèm",
   "Including uploaded images and files in the exported data": "Bao gồm hình ảnh và tệp đã tải lên trong dữ liệu đã xuất",
-  "{{count}} more user": "{{count}} more user",
-  "{{count}} more user_plural": "{{count}} more users",
+  "{{count}} more user": "{{count}} thành viên nữa",
+  "{{count}} more user_plural": "{{count}} thành viên nữa",
   "Filter": "Bộ Lọc",
   "No results": "Không có kết quả",
   "{{authorName}} created <3></3>": "{{authorName}} đã tạo <3></3>",
@@ -302,9 +302,9 @@
   "Mark all as read": "Đánh dấu tất cả là đã đọc",
   "You're all caught up": "Bạn đã xem hết",
   "Icon": "Icon",
-  "My App": "My App",
+  "My App": "Ứng dụng của tôi",
   "Tagline": "Tagline",
-  "A short description": "A short description",
+  "A short description": "Mô tả ngắn",
   "Callback URLs": "Callback URLs",
   "Published": "Đã đăng tải",
   "Allow this app to be installed by other workspaces": "Allow this app to be installed by other workspaces",
@@ -396,12 +396,12 @@
   "The {{ documentName }} cannot be moved here": "{{ documentName }} không thể di chuyển được đến đây",
   "Return to App": "Quay lại ứng dụng",
   "Installation": "Cài đặt",
-  "Unstar document": "Unstar document",
-  "Star document": "Star document",
+  "Unstar document": "Bỏ sao tài liệu",
+  "Star document": "Đánh sao tài liệu",
   "Template created, go ahead and customize it": "Đã tạo mẫu, hãy tiếp tục và tùy chỉnh nó",
   "Creating a template from <em>{{titleWithDefault}}</em> is a non-destructive action – we'll make a copy of the document and turn it into a template that can be used as a starting point for new documents.": "Đang tạo mẫu từ <em>{{titleWithDefault}}</em> là một hành động không phá hủy - chúng tôi sẽ tạo một bản sao của tài liệu và biến nó thành một mẫu có thể được sử dụng làm điểm bắt đầu cho các tài liệu mới.",
   "Enable other members to use the template immediately": "Enable other members to use the template immediately",
-  "Location": "Location",
+  "Location": "Vị trí",
   "Admins can manage the workspace and access billing.": "Admins can manage the workspace and access billing.",
   "Editors can create, edit, and comment on documents.": "Editors can create, edit, and comment on documents.",
   "Viewers can only view and comment on documents.": "Viewers can only view and comment on documents.",
@@ -454,7 +454,7 @@
   "Sorry, an error occurred creating the link": "Xin lỗi, đã xảy ra lỗi khi tạo đường link",
   "Create a new child doc": "Create a new child doc",
   "Delete table": "Xóa bảng",
-  "Delete file": "Delete file",
+  "Delete file": "Xóa tệp tin",
   "Width x Height": "Width x Height",
   "Download file": "Download file",
   "Replace file": "Replace file",
