fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -153,7 +153,7 @@
   "Revision": "Xem lại",
   "Navigation": "Điều hướng",
   "Notification": "Thông báo",
-  "People": "Mọi người",
+  "People": "Người tham gia",
   "Workspace": "Workspace",
   "Recent searches": "Tìm kiếm gần đây",
   "currently editing": "hiện đang chỉnh sửa",
@@ -323,7 +323,7 @@
   "No results for {{query}}": "Không có kết quả cho {{query}}",
   "Manage": "Quản lý",
   "All members": "Tất cả thành viên",
-  "Everyone in the workspace": "Mọi người trong không gian làm việc",
+  "Everyone in the workspace": "Người tham gia không gian làm việc",
   "{{ count }} member": "{{$count}} Thành viên",
   "{{ count }} member_plural": "{{$count}} Thành viên",
   "Invite": "Mời",
@@ -339,7 +339,7 @@
   "Suggestions for invitation": "Gợi ý cho lời mời",
   "No matches": "Không có kết quả nào phù hợp",
   "Can view": "Có thể xem",
-  "Everyone in the collection": "Mọi người trong bộ sưu tập",
+  "Everyone in the collection": "Người tham gia bộ sưu tập",
   "You have full access": "Bạn có toàn quyền",
   "Created the document": "Tạo tài liệu",
   "Other people": "Người khác",
@@ -663,7 +663,7 @@
   "Viewed by": "Được xem bởi",
   "only you": "chỉ bạn",
   "person": "cá nhân",
-  "people": "mọi người",
+  "people": "người tham gia",
   "Last updated": "Cập nhật gần nhất",
   "Type '/' to insert, or start writing…": "Gõ '/' để chèn hoặc bắt đầu viết…",
   "Hide contents": "Ẩn nội dung",
@@ -964,7 +964,7 @@
   "Check server logs for more details.": "Check server logs for more details.",
   "{{userName}} requested": "{{userName}} đã yêu cầu",
   "Groups are for organizing your team. They work best when centered around a function or a responsibility — Support or Engineering for example.": "Nhóm là để tổ chức nhóm của bạn. Chúng hoạt động tốt nhất khi tập trung vào một chức năng hoặc một trách nhiệm - chẳng hạn như Hỗ trợ hoặc Kỹ thuật.",
-  "You’ll be able to add people to the group next.": "Bạn sẽ có thể thêm mọi người vào nhóm tiếp theo.",
+  "You’ll be able to add people to the group next.": "Bạn sẽ có thể thêm người tham gia vào nhóm tiếp theo.",
   "You can edit the name of this group at any time, however doing so too often might confuse your team mates.": "Bạn có thể chỉnh sửa tên của nhóm này bất kỳ lúc nào, tuy nhiên làm như vậy quá thường xuyên có thể gây nhầm lẫn cho các thành viên trong nhóm của bạn.",
   "Are you sure about that? Deleting the <em>{{groupName}}</em> group will cause its members to lose access to collections and documents that it is associated with.": "Bạn có chắc chắn về điều đó không? Xóa nhóm <em>{{groupName}}</em> sẽ khiến các thành viên của nhóm đó mất quyền truy cập vào các bộ sưu tập và tài liệu được liên kết với nó.",
   "Add people to {{groupName}}": "Thêm người vào {{groupName}}",
@@ -979,7 +979,7 @@
   "Invite them to {{teamName}}": "Mời họ vào {{teamName}}",
   "Ask an admin to invite them first": "Ask an admin to invite them first",
   "Search by name": "Tìm theo tên",
-  "Search people": "Tìm kiếm mọi người",
+  "Search people": "Tìm kiếm thành viên",
   "No people matching your search": "Không có người nào phù hợp với tìm kiếm của bạn",
   "No people left to add": "Không còn người để thêm",
   "Date created": "Date created",
