--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -326,12 +326,25 @@
   "Everyone in the workspace": "Tout le monde dans l'espace de travail",
   "{{ count }} member": "{{ count }} membre",
   "{{ count }} member_plural": "{{ count }} membres",
+  "Only lowercase letters, digits and dashes allowed": "Seuls les lettres minuscules, les chiffres et le tiret sont autorisés",
+  "Sorry, this link has already been used": "Désolé, ce lien a déjà été utilisé",
+  "Public link copied to clipboard": "Lien public copié dans le presse-papier",
+  "Web": "Web",
+  "Allow anyone with the link to access": "Permettre à toute personne ayant le lien d'accéder",
+  "Publish to internet": "Publier sur Internet",
+  "Search engine indexing": "Indexation des moteurs de recherche",
+  "Disable this setting to discourage search engines from indexing the page": "Désactivez ce paramètre pour empêcher les moteurs de recherche d'indexer la page.",
+  "Show last modified": "Afficher les dernières modifications",
+  "Display the last modified timestamp on the shared page": "Afficher le dernier horodatage modifié sur la page partagée",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Inviter",
   "{{ userName }} was added to the collection": "{{ userName }} été ajouté à la collection",
   "{{ count }} people added to the collection": "{{ count }} personnes ajoutées à la collection",
   "{{ count }} people added to the collection_plural": "{{ count }} personnes ajoutées à la collection",
   "{{ count }} people and {{ count2 }} groups added to the collection": "{{ count }} personnes et {{ count2 }} groupes ont été ajoutés à la collection",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "{{ count }} personnes et {{ count2 }} groupes ont été ajoutés à la collection",
+  "Switch to dark": "Passer en mode sombre",
+  "Switch to light": "Passer en mode clair",
   "Add": "Ajouter",
   "Add or invite": "Ajouter ou inviter",
   "Viewer": "Lecteur",
@@ -356,17 +369,8 @@
   "Active <1></1> ago": "Actif il y a <1></1>",
   "Never signed in": "Jamais connecté",
   "Leave": "Quitter",
-  "Only lowercase letters, digits and dashes allowed": "Seuls les lettres minuscules, les chiffres et le tiret sont autorisés",
-  "Sorry, this link has already been used": "Désolé, ce lien a déjà été utilisé",
-  "Public link copied to clipboard": "Lien public copié dans le presse-papier",
-  "Web": "Web",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "N'importe qui avec le lien peut accéder car le document parent, <2>{{documentTitle}}</2>, est partagé",
-  "Allow anyone with the link to access": "Permettre à toute personne ayant le lien d'accéder",
-  "Publish to internet": "Publier sur Internet",
-  "Search engine indexing": "Indexation des moteurs de recherche",
-  "Disable this setting to discourage search engines from indexing the page": "Désactivez ce paramètre pour empêcher les moteurs de recherche d'indexer la page.",
-  "Show last modified": "Afficher les dernières modifications",
-  "Display the last modified timestamp on the shared page": "Afficher le dernier horodatage modifié sur la page partagée",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Les documents imbriqués ne sont pas partagés sur le web. Activer/désactiver le partage pour activer l'accès, ce sera le comportement par défaut dans le futur",
   "{{ userName }} was added to the document": "{{ userName }} a été ajouté au document",
   "{{ count }} people added to the document": "{{ count }} personnes ajoutées au document",
@@ -571,6 +575,7 @@
   "Share link revoked": "Lien de partage révoqué",
   "Share link copied": "Lien de partage copié",
   "Share options": "Options de partage",
+  "Go to collection": "Go to collection",
   "Go to document": "Accéder au document",
   "Revoke link": "Révoquer le lien",
   "Contents": "Contenu",
@@ -670,8 +675,6 @@
   "Show contents": "Afficher le contenu",
   "available when headings are added": "disponible lorsque les en-têtes sont ajoutés",
   "Edit {{noun}}": "Éditer {{noun}}",
-  "Switch to dark": "Passer en mode sombre",
-  "Switch to light": "Passer en mode clair",
   "Archived": "Archivé",
   "Save draft": "Enregistrer le brouillon",
   "Done editing": "Édition terminée",
@@ -713,7 +716,6 @@
   "Backlinks": "Rétroliens",
   "Close": "Fermer",
   "This document is large which may affect performance": "Ce document est volumineux et peut affecter les performances",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} utilise {{ appName }} pour partager des documents, veuillez vous connecter pour continuer.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "Voulez-vous vraiment supprimer le modèle <em>{{ documentTitle }}</em>?",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Êtes-vous sûr ? La suppression de <em>{{ documentTitle }}</em> supprimera tout son historique</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Êtes-vous sûr ? Supprimer le document <em>{{ documentTitle }}</em> effacera tout son historique et <em>{{ any }} documents imbriqués</em>.",
@@ -1004,6 +1006,7 @@
   "Guest": "Invité",
   "Never used": "Jamais utilisé",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Êtes-vous sûr de vouloir supprimer l'application {{ appName }} ? Cette action est irréversible.",
+  "Title": "Title",
   "Shared by": "Partagé par",
   "Date shared": "Date du partage",
   "Last accessed": "Dernier accès",
@@ -1146,6 +1149,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "Vous pouvez créer des modèles pour aider votre équipe à créer une documentation cohérente et précise.",
   "Alphabetical": "Alphabétique",
   "There are no templates just yet.": "Il n'y a pas encore de modèles.",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} utilise {{ appName }} pour partager des documents, veuillez vous connecter pour continuer.",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "Un code de confirmation a été envoyé à votre adresse e-mail, veuillez saisir le code ci-dessous pour supprimer définitivement cet espace de travail.",
   "Confirmation code": "Code de confirmation",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "Supprimer l'espace de travail <1>{{workspaceName}}</1> va détruire toutes les collections, tous les documents et utilisateurs ainsi que les données associées. Vous serez immédiatement déconnecté de {{appName}}.",
