fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -1,5 +1,6 @@
 {
   "New API key": "Nueva clave API",
+  "Delete": "Eliminar",
   "Revoke": "Revocar",
   "Revoke API key": "Revoke API key",
   "Revoke token": "Revocar token",
@@ -25,7 +26,6 @@
   "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "Archivar esta colección también archivará todos los documentos dentro de ella. Los documentos de la colección dejarán de ser visibles en los resultados de búsqueda.",
   "Restore": "Restaurar",
   "Collection restored": "Colección restaurada",
-  "Delete": "Eliminar",
   "Delete collection": "Eliminar colección",
   "New template": "Nueva plantilla",
   "Delete comment": "Eliminar comentario",
@@ -326,12 +326,25 @@
   "Everyone in the workspace": "Todos en el espacio de trabajo",
   "{{ count }} member": "{{ count }} miembro",
   "{{ count }} member_plural": "{{ count }} miembros",
+  "Only lowercase letters, digits and dashes allowed": "Solo se permiten letras minúsculas, dígitos y guiones",
+  "Sorry, this link has already been used": "Lo sentimos, este enlace ya ha sido utilizado",
+  "Public link copied to clipboard": "Enlace público copiado al portapapeles",
+  "Web": "Web",
+  "Allow anyone with the link to access": "Permitir acceso a cualquiera con el enlace",
+  "Publish to internet": "Publicar en Internet",
+  "Search engine indexing": "Indexación del motor de búsqueda",
+  "Disable this setting to discourage search engines from indexing the page": "Desactivar esta opción para desalentar que los motores de búsqueda indexen la página",
+  "Show last modified": "Show last modified",
+  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Invitar",
   "{{ userName }} was added to the collection": "{{ userName }} fue agregado a la colección",
   "{{ count }} people added to the collection": "{{ count }} persona añadida a la colección",
   "{{ count }} people added to the collection_plural": "{{ count }} personas añadidas a la colección",
   "{{ count }} people and {{ count2 }} groups added to the collection": "{{ count }} persona y {{ count2 }} grupos añadidos a la colección",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "{{ count }} personas y {{ count2 }} grupos añadidos a la colección",
+  "Switch to dark": "Cambiar al modo oscuro",
+  "Switch to light": "Cambiar al modo claro",
   "Add": "Agregar",
   "Add or invite": "Añadir o invitar",
   "Viewer": "Lector",
@@ -356,17 +369,8 @@
   "Active <1></1> ago": "Activo hace <1></1>",
   "Never signed in": "No ha iniciado sesión nunca",
   "Leave": "Salir",
-  "Only lowercase letters, digits and dashes allowed": "Solo se permiten letras minúsculas, dígitos y guiones",
-  "Sorry, this link has already been used": "Lo sentimos, este enlace ya ha sido utilizado",
-  "Public link copied to clipboard": "Enlace público copiado al portapapeles",
-  "Web": "Web",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "Cualquiera con el enlace puede acceder porque el documento padre, <2>{{documentTitle}}</2>, es compartido",
-  "Allow anyone with the link to access": "Permitir acceso a cualquiera con el enlace",
-  "Publish to internet": "Publicar en Internet",
-  "Search engine indexing": "Indexación del motor de búsqueda",
-  "Disable this setting to discourage search engines from indexing the page": "Desactivar esta opción para desalentar que los motores de búsqueda indexen la página",
-  "Show last modified": "Show last modified",
-  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Los documentos anidados no son compartidos en la web. Cambia las reglas de compartir para habilitar el acceso, este será el comportamiento predeterminado en el futuro",
   "{{ userName }} was added to the document": "{{ userName }} ha sido añadido al documento",
   "{{ count }} people added to the document": "{{ count }} persona ha sido añadida al documento",
@@ -571,6 +575,7 @@
   "Share link revoked": "Enlace para compartir revocado",
   "Share link copied": "Enlace para compartir copiado",
   "Share options": "Opciones de compartir",
+  "Go to collection": "Go to collection",
   "Go to document": "Ir al documento",
   "Revoke link": "Revocar enlace",
   "Contents": "Contenidos",
@@ -670,8 +675,6 @@
   "Show contents": "Mostrar contenidos",
   "available when headings are added": "disponible cuando se añadan encabezados",
   "Edit {{noun}}": "Editar {{noun}}",
-  "Switch to dark": "Cambiar al modo oscuro",
-  "Switch to light": "Cambiar al modo claro",
   "Archived": "Archivado",
   "Save draft": "Guardar borrador",
   "Done editing": "Edición finalizada",
@@ -713,7 +716,6 @@
   "Backlinks": "Enlaces de retroceso",
   "Close": "Cerrar",
   "This document is large which may affect performance": "This document is large which may affect performance",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} está usando {{ appName }} para compartir documentos, inicia sesión para continuar.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "¿Estás seguro de que quieres eliminar la plantilla <em>{{ documentTitle }}</em>?",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "¿Estás seguro? Eliminar el documento <em>{{ documentTitle }}</em> eliminará todo su historial</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "¿Estás seguro? Eliminar el documento <em>{{ documentTitle }}</em> eliminará todo su historial y <em>{{ any }} documento anidado</em>.",
@@ -1004,6 +1006,7 @@
   "Guest": "Invitado",
   "Never used": "Never used",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Are you sure you want to delete the {{ appName }} application? This cannot be undone.",
+  "Title": "Title",
   "Shared by": "Compartido por",
   "Date shared": "Fecha en que se compartió",
   "Last accessed": "Ultimo acceso",
@@ -1146,6 +1149,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "Puedes crear plantillas para ayudar a tu equipo a crear documentación coherente y precisa.",
   "Alphabetical": "Alfabético",
   "There are no templates just yet.": "Aún no hay plantillas.",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} está usando {{ appName }} para compartir documentos, inicia sesión para continuar.",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "Un código de confirmación ha sido enviado a tu dirección de correo electrónico, por favor ingresa el código a continuación para eliminar permanentemente este espacio de trabajo.",
   "Confirmation code": "Código de confirmación",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "Eliminar el espacio de trabajo <1>{{workspaceName}}</1> eliminará todas las colecciones, documentos, usuarios y datos asociados. Se cerrará inmediatamente la sesión de {{appName}}.",
