fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -1,5 +1,6 @@
 {
   "New API key": "Nowy klucz API",
+  "Delete": "Usuń",
   "Revoke": "Unieważnij",
   "Revoke API key": "Revoke API key",
   "Revoke token": "Unieważnij token",
@@ -25,7 +26,6 @@
   "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "Archiwizacja tej kolekcji zarchiwizuje wszystkie dokumenty w niej. Dokumenty z kolekcji nie będą już widoczne w wynikach wyszukiwania.",
   "Restore": "Przywróć",
   "Collection restored": "Odzyskano kolekcję",
-  "Delete": "Usuń",
   "Delete collection": "Usuń kolekcję",
   "New template": "Nowy szablon",
   "Delete comment": "Usuń komentarz",
@@ -326,12 +326,25 @@
   "Everyone in the workspace": "Wszyscy w projekcie",
   "{{ count }} member": "{{ count }} członek",
   "{{ count }} member_plural": "{{ count }} członków",
+  "Only lowercase letters, digits and dashes allowed": "Dozwolone są tylko małe litery, cyfry i myślniki",
+  "Sorry, this link has already been used": "Przepraszamy, ten link został już użyty",
+  "Public link copied to clipboard": "Publiczny link skopiowany do schowka",
+  "Web": "Sieć",
+  "Allow anyone with the link to access": "Zezwól każdemu z linkiem na dostęp",
+  "Publish to internet": "Opublikuj w internecie",
+  "Search engine indexing": "Indeksowanie wyszukiwarki",
+  "Disable this setting to discourage search engines from indexing the page": "Wyłącz to ustawienie, aby zniechęcać wyszukiwarki do indeksowania strony",
+  "Show last modified": "Show last modified",
+  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Zaproś",
   "{{ userName }} was added to the collection": "{{ userName }} został dodany do kolekcji",
   "{{ count }} people added to the collection": "{{ count }} osób dodanych do kolekcji",
   "{{ count }} people added to the collection_plural": "{{ count }} osób dodanych do kolekcji",
   "{{ count }} people and {{ count2 }} groups added to the collection": "{{ count }} osób i {{ count2 }} grup dodanych do kolekcji",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "{{ count }} osób i {{ count2 }} grup dodanych do kolekcji",
+  "Switch to dark": "Przełącz na tryb nocny",
+  "Switch to light": "Przełącz na tryb dzienny",
   "Add": "Dodaj",
   "Add or invite": "Dodaj lub zaproś",
   "Viewer": "Widz",
@@ -356,17 +369,8 @@
   "Active <1></1> ago": "Aktywny <1></1> temu",
   "Never signed in": "Nigdy nie zalogowany",
   "Leave": "Opuść",
-  "Only lowercase letters, digits and dashes allowed": "Dozwolone są tylko małe litery, cyfry i myślniki",
-  "Sorry, this link has already been used": "Przepraszamy, ten link został już użyty",
-  "Public link copied to clipboard": "Publiczny link skopiowany do schowka",
-  "Web": "Sieć",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "Każdy, kto posiada link, może uzyskać dostęp, ponieważ nadrzędny dokument, <2>{{documentTitle}}</2>, jest udostępniony",
-  "Allow anyone with the link to access": "Zezwól każdemu z linkiem na dostęp",
-  "Publish to internet": "Opublikuj w internecie",
-  "Search engine indexing": "Indeksowanie wyszukiwarki",
-  "Disable this setting to discourage search engines from indexing the page": "Wyłącz to ustawienie, aby zniechęcać wyszukiwarki do indeksowania strony",
-  "Show last modified": "Show last modified",
-  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Zagnieżdżone dokumenty nie są udostępniane w sieci. Przełącz udostępnianie, aby umożliwić dostęp, będzie to domyślne zachowanie w przyszłości",
   "{{ userName }} was added to the document": "{{ userName }} został dodany do dokumentu",
   "{{ count }} people added to the document": "{{ count }} osoba dodanya do dokumentu",
@@ -571,6 +575,7 @@
   "Share link revoked": "Unieważniono link udostępniania",
   "Share link copied": "Skopiowano link udostępnienia",
   "Share options": "Opcje udostępniania",
+  "Go to collection": "Go to collection",
   "Go to document": "Przejdź do dokumentu",
   "Revoke link": "Unieważnij link",
   "Contents": "Treść",
@@ -670,8 +675,6 @@
   "Show contents": "Pokaż zawartość",
   "available when headings are added": "dostępne po dodaniu nagłówków",
   "Edit {{noun}}": "Edytuj {{noun}}",
-  "Switch to dark": "Przełącz na tryb nocny",
-  "Switch to light": "Przełącz na tryb dzienny",
   "Archived": "Zarchiwizowano",
   "Save draft": "Zapisz wersję roboczą",
   "Done editing": "Zakończ edycję",
@@ -713,7 +716,6 @@
   "Backlinks": "Linki zwrotne",
   "Close": "Zamknij",
   "This document is large which may affect performance": "This document is large which may affect performance",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} używa {{ appName }} do udostępniania dokumentów, zaloguj się, aby kontynuować.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "Czy na pewno chcesz usunąć szablon <em>{{ documentTitle }}</em>?",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Czy jesteś tego pewien? Usunięcie dokumentu <em>{{ documentTitle }}</em> spowoduje usunięcie całej jego historii</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Czy jesteś tego pewien? Usunięcie dokumentu <em>{{ documentTitle }}</em> spowoduje usunięcie całej jego historii oraz <em>{{ any }} zagnieżdżonych dokumentów</em>.",
@@ -1004,6 +1006,7 @@
   "Guest": "Gość",
   "Never used": "Nigdy nie używany",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Czy na pewno chcesz usunąć aplikację {{ appName }}? Nie można tego cofnąć.",
+  "Title": "Title",
   "Shared by": "Udostępnione przez",
   "Date shared": "Data udostępnienia",
   "Last accessed": "Ostatnio otwarto",
@@ -1146,6 +1149,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "Możesz utworzyć szablony, aby ułatwić swojemu zespołowi tworzenie spójnej i dokładnej dokumentacji.",
   "Alphabetical": "Alfabetycznie",
   "There are no templates just yet.": "Nie ma jeszcze żadnych szablonów.",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} używa {{ appName }} do udostępniania dokumentów, zaloguj się, aby kontynuować.",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "Na Twój adres e-mail został wysłany kod potwierdzający, wpisz poniżej kod, aby trwale zniszczyć ten obszar roboczy.",
   "Confirmation code": "Kod potwierdzający",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "Usunięcie obszaru roboczego <1>{{workspaceName}}</1> zniszczy wszystkie kolekcje, dokumenty, użytkowników i powiązane dane. Zostaniesz natychmiast wylogowany z {{appName}}.",
